--- a/index.html
+++ b/index.html
@@ -10,21 +10,15 @@
       text-align: center;
       padding: 20px;
     }
-    input, button {
-      padding: 12px;
-      margin: 10px;
-      width: 90%;
-      max-width: 400px;
-    }
-    button {
-      background: #00ffcc;
-      border: none;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .box {
-      margin-top: 20px;
-    }
+    input {
+  display: block;
+  margin: 20px auto;
+}
+
+button {
+  display: block;
+  margin: 10px auto;
+}
   </style>
 </head>
 
